@@ -15,6 +15,8 @@
         * include/Rcpp/DataFrame.h: just have declaration for DataFrame
         * include/Rcpp/Benchmark/Timer.h: move it into the Rcpp:: namespace
         * include/Rcpp/cache.h: clean
+        * include/Rcpp/Reference.h : field was declared const and should not be. 
+        added a ConstFieldProxy class for read only use
         
 2012-12-09 Romain Francois <romain@r-enthusiasts.com>
 
